--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,40 +3,73 @@ name: build
 on:
   push:
     branches:
-      - master
-      - main
+    - main
+    - master
+  schedule:
+  - cron: '30 12 * * 3'
 
 jobs:
-  build:
+  arm64:
+    runs-on: arvato
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
+    - name: Login to GitHub Packages Docker Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and Push Latest
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        pull: true
+        tags: ghcr.io/arvatoaws-labs/asy-filebrowser:latest-arm64
+        cache-from: type=registry,ref=ghcr.io/arvatoaws-labs/asy-filebrowser:latest-arm64
+        cache-to: type=inline
+  amd64:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          install: true
-          version: latest
-          driver-opts: image=moby/buildkit:master
-      - name: Login to GitHub Packages Docker Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{github.actor}}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          #username: jenkins-arvato
-          #password: ${{ secrets.CR_PAT }}
-      - name: Build and Push Latest
-        uses: docker/build-push-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          pull: true
-          tags: ghcr.io/arvatoaws-labs/asy-filebrowser:latest
-          cache-from: type=registry,ref=ghcr.io/arvatoaws-labs/asy-filebrowser:latest
-          cache-to: type=inline
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
+    - name: Login to GitHub Packages Docker Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and Push Latest
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        pull: true
+        tags: ghcr.io/arvatoaws-labs/asy-filebrowser:latest-amd64
+        cache-from: type=registry,ref=ghcr.io/arvatoaws-labs/asy-filebrowser:latest-amd64
+        cache-to: type=inline
+  manifest:
+    runs-on: arvato
+    needs: [arm64, amd64]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
+    - name: Login to GitHub Packages Docker Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Merge manifests Latest
+      run: |
+        set -x
+        echo "Merging manifests"
+        docker manifest create "ghcr.io/arvatoaws-labs/asy-filebrowser:latest" "ghcr.io/arvatoaws-labs/asy-filebrowser:latest-arm64" "ghcr.io/arvatoaws-labs/asy-filebrowser:latest-amd64"
+        docker manifest annotate --arch arm64 "ghcr.io/arvatoaws-labs/asy-filebrowser:latest" "ghcr.io/arvatoaws-labs/asy-filebrowser:latest-arm64"
+        docker manifest annotate --arch amd64 "ghcr.io/arvatoaws-labs/asy-filebrowser:latest" "ghcr.io/arvatoaws-labs/asy-filebrowser:latest-amd64"
+        docker manifest push "ghcr.io/arvatoaws-labs/asy-filebrowser:latest"
