--- a/config.json
+++ b/config.json
@@ -1,9 +1,8 @@
-
 {
   "port": 80,
   "baseURL": "",
   "address": "",
   "log": "stdout",
-  "database": "/config/filebrowser.db",
+  "database": "/database/filebrowser.db",
   "root": "/data"
 }
